Solved bug , dropdown on mobile , was cut off by overflow hidden

--- a/aegon-sass-library/components/_quickquote-lijfrente-sparen.scss
+++ b/aegon-sass-library/components/_quickquote-lijfrente-sparen.scss
@@ -204,7 +204,7 @@
       .input-header {
         position:relative;
         display:block;
-        overflow:hidden;
+        overflow:visible;
         label {
           display:block;
           width:100%;
@@ -242,7 +242,7 @@
               display: block;
               width: 100% !important;
               max-width: 220px;
-              float: right;
+              float: none;
               clear: both;
               margin-right: 0;
               margin-bottom: 10px;
@@ -251,7 +251,7 @@
               display: block;
               width: 100%;
               max-width: 220px;
-              float: right;
+              float: none;
               clear: both;
             }
             &:after {
